--- a/3. ročník/01 CSS/efekty/nadpis.html
+++ b/3. ročník/01 CSS/efekty/nadpis.html
@@ -3,6 +3,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <style>
 
         body {
@@ -24,7 +27,18 @@
             background: url("pozadinadpisu.png");
             background-position: 0 0;
             -webkit-background-clip: text;
+            background-clip: text;
+            animation: text 15s linear infinite;
+            font-family: Roboto;
+            font-weight: normal;
             
+            
+        }
+
+        @keyframes text {
+            100% {
+                background-position: 1000px 0;
+            }
         }
     </style>
 </head>
