--- a/3. ročník/01 CSS/efekty/nadpis.html
+++ b/3. ročník/01 CSS/efekty/nadpis.html
@@ -1,50 +1,53 @@
 <html lang="cs">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <style>
-
-        body {
-            background-color: #181818;
-        }
-
-        .wrapper {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-        }
-
-        h1 {
-            /* 1 rem = 16px */
-            font-size: 5rem; 
-            color: transparent;
-            -webkit-text-stroke: 1px white;
-            background: url("pozadinadpisu.png");
-            background-position: 0 0;
-            -webkit-background-clip: text;
-            background-clip: text;
-            animation: text 15s linear infinite;
-            font-family: Roboto;
-            font-weight: normal;
-            
-            
-        }
-
-        @keyframes text {
-            100% {
-                background-position: 1000px 0;
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+            rel="stylesheet" />
+        <style>
+            body {
+                background-color: #181818;
             }
-        }
-    </style>
-</head>
-<body>
-    <div class="wrapper">
-        <h1>Dobrý den, géčko</h1>
-    </div>
-</body>
+
+            .wrapper {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                min-height: 100vh;
+            }
+
+            h1 {
+                /* 1 rem = 16px ... rem je flexibilnější jednotka */
+                font-size: 5rem;
+                color: transparent;
+                /* nastaví, aby byla vidět čára, kterou je psaný text */
+                -webkit-text-stroke: 1px white;
+                background: url("pozadinadpisu.png");
+                background-position: 0 0;
+                /* ne všechna nastavení fungují na všech prohlížečích stejně
+                -webkit zajišťuje správnou funkcionalitu na určitých prohlížečích (Safari, Chrome) */
+                -webkit-background-clip: text;
+                /* nastaví, aby obrázek na pozadí nepřekrýval text, ale byl přesně za ním */
+                background-clip: text;
+                animation: text 15s linear infinite;
+                font-family: Roboto;
+                font-weight: normal;
+            }
+
+            @keyframes text {
+                100% {
+                    background-position: 1000px 0;
+                }
+            }
+        </style>
+    </head>
+    <body>
+        <div class="wrapper">
+            <h1>Dobrý den, géčko</h1>
+        </div>
+    </body>
 </html>
