--- a/3. ročník/01 CSS/gradient/gradient.html
+++ b/3. ročník/01 CSS/gradient/gradient.html
@@ -1,17 +1,21 @@
 <html lang="cs">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-   <style>
-     body {
-        height: 100vh;
-        background-image: linear-gradient(45deg, #5EA7C2, #75E5A8, #F9F871);
-    }
-
-   </style>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+        <style>
+            body {
+                height: 100vh;
+                /* gradient zajistí plynulí přechod mezi barvami 
+                lze zadat úhel gradientu (nepovinné) a dvě až libovolný počet barev*/
+                background-image: linear-gradient(
+                    45deg,
+                    #5ea7c2,
+                    #75e5a8,
+                    #f9f871
+                );
+            }
+        </style>
+    </head>
+    <body></body>
 </html>
