--- a/3. ročník/01 CSS/parallax/parallax.html
+++ b/3. ročník/01 CSS/parallax/parallax.html
@@ -6,12 +6,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="firefly"></div>
     <div class="parallax">
             <img class="clouds_1" src="layers/clouds_1.png" alt="">
             <img class="clouds_2" src="layers/clouds_2.png" alt="">
             <img class="ground" src="layers/ground.png" alt="">
             <img class="rocks" src="layers/rocks.png" alt="">
             <img class="sky" src="layers/sky.png" alt="">
+            <h1 class="heading">Hello!</h1>
     </div>
     <section>
         <p>
@@ -85,5 +87,7 @@
             cover of a starry night in the heart of the mountains.
         </p>
     </section>
+
+    <script src="app.js"></script>
 </body>
 </html>
