--- a/3. ročník/01 CSS/vzducholoď/practice.html
+++ b/3. ročník/01 CSS/vzducholoď/practice.html
@@ -101,5 +101,15 @@
                 >
             </p>
         </section>
+
+        <script>
+            let hamburger = document.querySelector(".hamburger")
+            let nabidka = document.querySelector("nav ul")
+
+            hamburger.addEventListener("click", function() {
+                nabidka.classList.toggle("ukaz")
+            })
+
+        </script>
     </body>
 </html>
